PolyAlphab. c. to new design

--- a/src/app/pages/polyalphabetic-cipher-module/polyalphabetic-cipher-component/polyalph-boxes-component/polyalph-boxes-component.component.css
+++ b/src/app/pages/polyalphabetic-cipher-module/polyalphabetic-cipher-component/polyalph-boxes-component/polyalph-boxes-component.component.css
@@ -1,3 +1,12 @@
 .center-toogle-group {
-    margin: auto;
+  margin: auto;
+}
+
+.box {
+  margin: 7px 0;
+  padding: 8px;
+}
+
+mat-button-toggle-group {
+  flex-wrap: wrap;
 }
