--- a/src/app/pages/polyalphabetic-cipher-module/polyalphabetic-cipher-component/polyalph-boxes-component/polyalph-boxes-component.component.html
+++ b/src/app/pages/polyalphabetic-cipher-module/polyalphabetic-cipher-component/polyalph-boxes-component/polyalph-boxes-component.component.html
@@ -1,70 +1,77 @@
 <div class="container text-center col-md-12">
-    <b>Choose length of key</b>
+  <b>Choose length of key</b>
+  <br />
+  <div class="row">
+    <mat-button-toggle-group
+      class="center-toogle-group"
+      [(ngModel)]="selectedValue"
+      #group="matButtonToggleGroup"
+    >
+      <mat-button-toggle
+        *ngFor="let item of toggleOptions"
+        (change)="selectionOfGraphChanged($event)"
+        [value]="item"
+      >
+        {{ item }}
+      </mat-button-toggle>
+    </mat-button-toggle-group>
     <br />
-    <div class="row ">
-      <mat-button-toggle-group class="center-toogle-group" [(ngModel)]="selectedValue" #group="matButtonToggleGroup" >
-        <mat-button-toggle
-          *ngFor="let item of toggleOptions"
-          (change)="selectionOfGraphChanged($event)"
-          [value]="item"
-        >
-          {{ item }}
-        </mat-button-toggle>
-      </mat-button-toggle-group>
-      <br>
-      <br>
-      <br>
+    <br />
+    <br />
 
-      <br />
-      <div class="container">
-        <div class="row ">
-          <div class="col-md-11">
-            <div
-              *ngIf="passedMinIc; else notPassed"
-              class="alert alert-danger"
-              role="alert"
+    <br />
+    <div class="container">
+      <div class="row">
+        <div class="col-md-11">
+          <div
+            *ngIf="passedMinIc; else notPassed"
+            class="alert alert-danger"
+            role="alert"
+          >
+            <strong>Input text is not from language</strong>
+            <br />
+            <span
+              >Avarage Index of coincidence for all boxes is:
+              {{ ic.value | number: "1.0-4" }}</span
             >
-              <strong>Input text is not from language</strong>
-              <br />
+            <br />
+          </div>
+          <ng-template #notPassed>
+            <div class="alert alert-success" role="alert">
               <span
                 >Avarage Index of coincidence for all boxes is:
                 {{ ic.value | number: "1.0-4" }}</span
               >
               <br />
             </div>
-            <ng-template #notPassed>
-              <div class="alert alert-success" role="alert">
-                <span
-                  >Avarage Index of coincidence for all boxes is:
-                  {{ ic.value | number: "1.0-4" }}</span
-                >
-                <br />
-              </div>
-            </ng-template>
-            <br /><br />
-          </div>
-        </div>
-      </div>
-
-      <div class="row">
-        <div
-          class="col-md-3 col-sm-3 box"
-          *ngFor="let box of allBoxes[selectedValueNum - 2];let j = index">
-          <mat-card>
-            <mat-card-header>
-              <mat-card-title>Box {{ j + 1 }}</mat-card-title>
-            </mat-card-header>
-            <mat-card-content style="word-wrap: break-word;">
-              <span [style.color]="colors[j % selectedValueNum]">
-                {{ box }}
-              </span>
-            </mat-card-content>
-            <mat-card-actions>
-              IC for box is:
-              {{ allBoxesIc[selectedValueNum - 2][j] | number: "1.0-4" }}
-            </mat-card-actions>
-          </mat-card>
+          </ng-template>
+          <br /><br />
         </div>
       </div>
     </div>
   </div>
+</div>
+
+<div class="col-md-12 container">
+  <div class="row">
+  <div
+    class="col-md-3 col-sm-3 box"
+    *ngFor="let box of allBoxes[selectedValueNum - 2]; let j = index"
+  >
+    <mat-card>
+      <mat-card-header>
+        <mat-card-title>Box {{ j + 1 }}</mat-card-title>
+      </mat-card-header>
+      <mat-card-content style="word-wrap: break-word;">
+        <span [style.color]="colors[j % selectedValueNum]">
+          {{ box }}
+        </span>
+      </mat-card-content>
+      <mat-card-actions>
+        IC for box is:
+        {{ allBoxesIc[selectedValueNum - 2][j] | number: "1.0-4" }}
+      </mat-card-actions>
+    </mat-card>
+  </div>
+</div>
+</div>
