--- a/src/app/pages/polyalphabetic-cipher-module/polyalphabetic-cipher-component/polyalph-cipher.component.html
+++ b/src/app/pages/polyalphabetic-cipher-module/polyalphabetic-cipher-component/polyalph-cipher.component.html
@@ -1,19 +1,33 @@
-<div class="container">
-  <div class="row text-center">
-    <div class="col-md-12">
-      <br>
-      <div class="col-md-8 col-md-offset-2">
-        The Vigenere Cipher is a method of encrypting alphabetic text by using a series of Caesar ciphers, 
-        based on the letters of a keyword. In a Caesar cipher, each letter of the alphabet is shifted along some number of places. 
-        For example, in a Caesar cipher of shift 3, A would become D, B would become E,
-         Y would become B and so on. The Vigenère cipher has several Caesar ciphers in sequence with different shift values.
-      </div>
+<app-side-navbar [sideMenu]="sideMenu" [topGap]="topGap" class="col-md-12">
+  <div class="container">
+    <mat-card class="col-md-12 info-mat-card">
+      <mat-card-header>
+        <mat-card-title>Description</mat-card-title>
+      </mat-card-header>
+      <mat-card-content style="word-wrap: break-word;">
+        <div class="col-md-8 col-md-offset-2">
+          The Vigenere Cipher is a method of encrypting alphabetic text by using
+          a series of Caesar ciphers, based on the letters of a keyword. In a
+          Caesar cipher, each letter of the alphabet is shifted along some
+          number of places. For example, in a Caesar cipher of shift 3, A would
+          become D, B would become E, Y would become B and so on. The Vigenère
+          cipher has several Caesar ciphers in sequence with different shift
+          values.
+        </div>
+      </mat-card-content>
+    </mat-card>
 
-      <br>
-      <mat-card>
-        <mat-vertical-stepper #stepper>
-          <mat-step>
-            <ng-template matStepLabel>Fill out Key and Message</ng-template>
+    <br />
+
+    <div class="col-md-12">
+      <br />
+      <div class="row">
+        <mat-card id="inputs" class="col-md-12 action-mat-card">
+          <mat-card-header>
+            <mat-card-title>Fill out Key and Message</mat-card-title>
+          </mat-card-header>
+
+          <mat-card-content style="word-wrap: break-word;">
             <form [formGroup]="cipherInputsForm" (ngSubmit)="calcDataForPage()">
               <mat-form-field>
                 <input
@@ -24,19 +38,28 @@
                   formControlName="key"
                   maxlength="3"
                 />
-                <mat-hint>Please, enter key of length 2 to 3 and key must include letters a-z or A-Z. </mat-hint>
-                <mat-error *ngIf="cipherInputsForm.get('key').hasError('maxlength') || cipherInputsForm.get('key').hasError('minlength')">
+                <mat-hint
+                  >Please, enter key of length 2 to 3 and key must include
+                  letters a-z or A-Z.
+                </mat-hint>
+                <mat-error
+                  *ngIf="
+                    cipherInputsForm.get('key').hasError('maxlength') ||
+                    cipherInputsForm.get('key').hasError('minlength')
+                  "
+                >
                   Please, enter key of length 2 to 3.
                 </mat-error>
-                <mat-error *ngIf="cipherInputsForm.get('key').hasError('pattern')">
+                <mat-error
+                  *ngIf="cipherInputsForm.get('key').hasError('pattern')"
+                >
                   Please, text must include letters a-z or A-Z.
                 </mat-error>
               </mat-form-field>
 
               <br />
-              <br />
-              <br />
-              <mat-form-field style="width:50vw">
+
+              <mat-form-field style="width: 50vw;">
                 <textarea
                   matInput
                   cdkTextareaAutosize
@@ -48,124 +71,164 @@
                   formControlName="message"
                   maxlength="2000"
                 ></textarea>
-                <mat-hint>Please, enter message longer than 20 letters and  text must include letters a-z or A-Z. </mat-hint>
-                <mat-error *ngIf="cipherInputsForm.get('message').hasError('minlength')">
+                <mat-hint
+                  >Please, enter message longer than 20 letters and text must
+                  include letters a-z or A-Z.
+                </mat-hint>
+                <mat-error
+                  *ngIf="cipherInputsForm.get('message').hasError('minlength')"
+                >
                   Please, enter message longer than 20 letters.
                 </mat-error>
-                <mat-error *ngIf="cipherInputsForm.get('message').hasError('maxlength')">
+                <mat-error
+                  *ngIf="cipherInputsForm.get('message').hasError('maxlength')"
+                >
                   Please, enter message shorter than 2000 letters.
                 </mat-error>
-                <mat-error *ngIf="cipherInputsForm.get('message').hasError('pattern')">
+                <mat-error
+                  *ngIf="cipherInputsForm.get('message').hasError('pattern')"
+                >
                   Please, text must include letters a-z or A-Z.
                 </mat-error>
               </mat-form-field>
-             
-              <br />
-              <br />
-            
 
-              <button [disabled]="!cipherInputsForm.valid" mat-stroked-button color="primary" type="submit">
-                En/Decrypt Text
-              </button>
+              <br />
+              <br />
             </form>
-          </mat-step>
-          <mat-step>
-            <ng-template matStepLabel
+          </mat-card-content>
+
+          <mat-card-actions>
+            <button
+              [disabled]="!cipherInputsForm.valid"
+              mat-stroked-button
+              color="primary"
+              type="submit"
+            >
+              En/Decrypt Text
+            </button>
+          </mat-card-actions>
+        </mat-card>
+      </div>
+
+      <!-- <ng-template matStepLabel
               >Show Encrypted and Decrypted Message</ng-template
-            >
-            <br />
-            In Encrypted block we can see separated text to blocks. For example when we have key of length 3. We get 3 boxes. See a more detailed example below
-            <br>
-            <br>
-            <div class="row">
-              <div class="col-md-6">
-                <mat-card>
-                  <mat-card-header>
-                    <mat-card-title>Encrypted Text</mat-card-title>
-                  </mat-card-header>
-                  <mat-card-content style="word-wrap: break-word;">
-                    <span
-                      *ngFor="let letter of encMessageSplitted; let i = index"
-                      [style.color]="colors[i % keyLength]"
-                    >
-                      {{ letter }}
-                    </span>
-                  </mat-card-content>
-                </mat-card>
-              </div>
-              <div class="col-md-6">
-                <mat-card>
-                  <mat-card-header>
-                    <mat-card-title>Dencrypted Text</mat-card-title>
-                  </mat-card-header>
-                  <mat-card-content style="word-wrap: break-word;">
-                    <p>
-                      {{ decryptedText }}
-                    </p>
-                  </mat-card-content>
-                </mat-card>
-              </div>
-            </div>
-          </mat-step>
-
-          <br />
-          <mat-step>
-            <ng-template matStepLabel
-              >Show IC for different length of key</ng-template
-            >
-            <br />
-            <br /><br />
-            <div class="col-md-12">
-              <div class="col-md-8">
-                <span>We try find length of key. We separate text into boxes, number of boxes is length of key.
-                  For example when we have key of length 3 boxe, in first box will be first letter from encrypted text(CT), 
-                  in second box second letter form CT, in third box third letter of CT. Then we repeat and in first box will be fourth letter of CT, in second box will be fifth letter and so on.
-                  Then we compute frequency of every box and Index Coincidence(IC).
-                  For boxes we compute average of ICs.
-                  Then we repeat this steps and we compute average ICs for key of length <2,16>
-                  In this example we expect that text is in English language.
-                  </span>
-              </div>
-              <div class="alert alert-success" role="alert">
-               
-                <!-- <span>The best Index of coincidence is: {{highestIC | number:'1.0-4'}}</span> -->
-                <span>The best lengths of key are: </span>
-                <p *ngFor="let index of highestIC">
-                  <span>{{ index.box }} </span>
-                  <span>with IC {{ index.value | number: "1.0-4" }}</span>
-                </p>
-              </div>
-            </div>
-            <br />
-
-            <app-polyalph-boxes-component
-              [allBoxesAvgIc]="allBoxesAvgIc"
-              [ic]="ic"
-              [allBoxes]="allBoxes"
-              [allBoxesIc]="allBoxesIc"
-              [toggleOptions]="toggleOptions"
-            ></app-polyalph-boxes-component>
-          </mat-step>
-
-          <mat-step>
-            <ng-template matStepLabel
-              >Compute all combinations for key</ng-template
-            >
-            <div class="col-md-12">
-              We try decrypt message and find out key of encrypted message. We use guess of key length form previous step.
-We do it only for key of length <2,3> because we compute all possibilities on client computer.  Key of length has 26^3 = 17,576‬ possible keys, but key of length 4 has 26^4 has 456 976 keys. 
-              <br>
-              <app-table
-                [columnNames]="columnsBestResults"
-                [dataSource]="dataSourceBestResults"
-                [defaultSort]="sortBestResults"
-                [ready]="dataSourceBestResultsReady"
+            > -->
+      <br />
+      <!-- In Encrypted block we can see separated text to blocks. For example when
+        we have key of length 3. We get 3 boxes. See a more detailed example
+        below -->
+      <br />
+      <br />
+      <div class="row">
+        <div class="col-md-6 remove-left-marigns">
+          <mat-card>
+            <mat-card-header>
+              <mat-card-title>Encrypted Text</mat-card-title>
+            </mat-card-header>
+            <mat-card-content style="word-wrap: break-word;">
+              <span
+                *ngFor="let letter of encMessageSplitted; let i = index"
+                [style.color]="colors[i % keyLength]"
               >
-              </app-table>
-            </div>
-          </mat-step>
-        </mat-vertical-stepper>
+                {{ letter }}
+              </span>
+            </mat-card-content>
+          </mat-card>
+        </div>
+        <div class="col-md-6 remove-right-marigns">
+          <mat-card>
+            <mat-card-header>
+              <mat-card-title>Dencrypted Text</mat-card-title>
+            </mat-card-header>
+            <mat-card-content style="word-wrap: break-word;">
+              <p>
+                {{ decryptedText }}
+              </p>
+            </mat-card-content>
+          </mat-card>
+        </div>
+      </div>
+
+      <br />
+
+      <mat-card id="alghorithm" class="col-md-12 info-mat-card">
+        <mat-card-header>
+          <mat-card-title>Alghorithm to find key</mat-card-title>
+        </mat-card-header>
+        <mat-card-content style="word-wrap: break-word;">
+          <div class="col-md-8 col-md-offset-2">
+            We try find length of key. We separate text into boxes, number of
+            boxes is length of key. For example when we have key of length 3
+            boxe, in first box will be first letter from encrypted text(CT), in
+            second box second letter form CT, in third box third letter of CT.
+            Then we repeat and in first box will be fourth letter of CT, in
+            second box will be fifth letter and so on. Then we compute frequency
+            of every box and Index Coincidence(IC). For boxes we compute average
+            of ICs. Then we repeat this steps and we compute average ICs for key
+            of length <2,16> In this example we expect that text is in English
+            language.
+          </div>
+        </mat-card-content>
       </mat-card>
+
+      <br />
+
+      <mat-card id="findkey" class="col-md-12 computed-mat-card">
+        <mat-card-header>
+          <mat-card-title>Show IC for different length of key</mat-card-title>
+        </mat-card-header>
+        <mat-card-content style="word-wrap: break-word;">
+          <div class="col-md-12">
+            <div class="alert alert-success" role="alert">
+              <!-- <span>The best Index of coincidence is: {{highestIC | number:'1.0-4'}}</span> -->
+              <span>The best lengths of key are: </span>
+              <ol>
+                <li *ngFor="let index of highestIC">
+                  <span>Length of {{ index.box }} </span>
+                  <span>with IC {{ index.value | number: "1.0-4" }}</span>
+                </li>
+              </ol>
+            </div>
+          </div>
+          <br />
+
+          <app-polyalph-boxes-component
+            [allBoxesAvgIc]="allBoxesAvgIc"
+            [ic]="ic"
+            [allBoxes]="allBoxes"
+            [allBoxesIc]="allBoxesIc"
+            [toggleOptions]="toggleOptions"
+          ></app-polyalph-boxes-component>
+        </mat-card-content>
+      </mat-card>
+
+      <br />
+
+      <mat-card id="allcombinations" class="col-md-12 computed-mat-card">
+        <mat-card-header>
+          <mat-card-title>Compute all combinations for key</mat-card-title>
+        </mat-card-header>
+        <mat-card-content style="word-wrap: break-word;">
+          <div class="col-md-12">
+            We try decrypt message and find out key of encrypted message. We use
+            guess of key length form previous step. We do it only for key of
+            length <2,3> because we compute all possibilities on client
+            computer. Key of length has 26^3 = 17,576‬ possible keys, but key of
+            length 4 has 26^4 has 456 976 keys.
+            <br />
+            <br />
+
+            <app-table
+              [columnNames]="columnsBestResults"
+              [dataSource]="dataSourceBestResults"
+              [defaultSort]="sortBestResults"
+              [ready]="dataSourceBestResultsReady"
+            >
+            </app-table>
+          </div>
+        </mat-card-content>
+      </mat-card>
+      <br />
     </div>
   </div>
-</div>
+</app-side-navbar>
