Fix header on smaller devices

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,5 +1,5 @@
 <nav class="main-navbar navbar navbar-expand-lg navbar-light bg-navbar-blue">
-  <div class="mx-auto">
+  <div class="center-navbar">
     <a class="navbar-brand" href="#">
       <img
         class="d-inline-block align-top"
