Created home screen
When is usre on home screen info panel about cipher name is hide

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -61,7 +61,7 @@
   </div>
 
 </nav>
-<nav
+<nav *ngIf="showInfoPanel"
   class="cipher-navbar navbar navbar-expand-lg navbar-light bg-navbar-blue "
   [@scrollAnimation]="isHeader1Visible"
 >
