--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -55,7 +55,7 @@
         </li>
       </div>
     </div>
-    <button type="button" class="btn btn-sm btn-outline-secondary">About</button>
+    <button type="button" class="btn btn-sm btn-outline-secondary" routerLink="/about">About</button>
   </div>
 
   </div>
